[project]
name = "unessay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "pyvis>=0.3.2",
    "scipy>=1.10.0",
]
